--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Your Best Five Player</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header Area Start -->
@@ -50,5 +51,22 @@
         </div>
     </header>
     <!-- Header Area End -->
+    <!-- Hero Section -->
+    <section class="container mx-auto pt-20">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-3 items-center">
+            <div>
+                <h1 class="text-5xl">Select Your Best Five</h1>
+                <p class="text-black mt-2 w-full md:w-9/12">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+            <div>
+                <img src="images/best-five.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Hero Section End -->
+    <!-- Main Body Area -->
+    <main>
+
+    </main>
 </body>
 </html>
