button disable after click

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     <li>36 Goals</li>
                                     <li>120 Assist</li>
                                 </ul>
-                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase" onclick="selectPlayer(this)">Select</button>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
@@ -87,7 +87,7 @@
                                     <li>36 Goals</li>
                                     <li>120 Assist</li>
                                 </ul>
-                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase" onclick="selectPlayer(this)">Select</button>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
@@ -98,7 +98,7 @@
                                     <li>36 Goals</li>
                                     <li>120 Assist</li>
                                 </ul>
-                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase" onclick="selectPlayer(this)">Select</button>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
@@ -109,7 +109,7 @@
                                     <li>36 Goals</li>
                                     <li>120 Assist</li>
                                 </ul>
-                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase" onclick="selectPlayer(this)">Select</button>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
@@ -120,7 +120,7 @@
                                     <li>36 Goals</li>
                                     <li>120 Assist</li>
                                 </ul>
-                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase" onclick="selectPlayer(this)">Select</button>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
@@ -131,7 +131,7 @@
                                     <li>36 Goals</li>
                                     <li>120 Assist</li>
                                 </ul>
-                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase" onclick="selectPlayer(this)">Select</button>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                     </div>
