--- a/index.html
+++ b/index.html
@@ -156,31 +156,31 @@
                             <div class="grid grid-cols-3 items-center mb-5">
                                 <div>Per Player</div>
                                 <div class="col-span-2">
-                                    <input id="food-amount" type="text"class="block w-full px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none" placeholder="Per Player Cost" />
+                                    <input id="total-player" type="text"class="block w-full px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 text-black font-bold focus:outline-none" placeholder="Per Player Cost" />
                                 </div>
                             </div>
-                            <button class="bg-sky-600 w-full py-3 text-white font-bold mb-5">Calculate</button>
+                            <button id="calculate" class="bg-sky-600 w-full py-3 text-white font-bold mb-5">Calculate</button>
                         </div>
 
                         <div>
                             <div class="grid grid-cols-2 items-center mb-5">
                                 <div>Player Expenses</div>
-                                <div class="text-right total-style">$ <span>00</span></div>
+                                <div class="text-right total-style font-bold">$ <span id="player-expenses">00</span></div>
                             </div>
                             <div class="grid grid-cols-3 items-center mb-5">
                                 <div>Manager</div>
                                 <div class="col-span-2 mb-5">
-                                    <input id="food-amount" type="text"class="block w-full px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none" placeholder="Manager Cost" />
+                                    <input id="food-amount" type="text"class="block w-full px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 text-black font-bold focus:outline-none" placeholder="Manager Cost" />
                                 </div>
                                 <div>Coach</div>
                                 <div class="col-span-2">
-                                    <input id="food-amount" type="text"class="block w-full px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none" placeholder="Coach Cost" />
+                                    <input id="food-amount" type="text"class="block w-full px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 text-black font-bold focus:outline-none" placeholder="Coach Cost" />
                                 </div>
                             </div>
                             <button class="bg-sky-600 w-full py-3 text-white font-bold mb-5">Calculate Total</button>
                             <div class="grid grid-cols-2 items-center">
                                 <div>Total</div>
-                                <div class="text-right total-style">$ <span>00</span></div>
+                                <div class="text-right total-style font-bold">$ <span>00</span></div>
                             </div>
                         </div>
                     </div>
@@ -383,6 +383,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/utilities.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
