new player added and content change

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
                             <img class="w-full" src="images/messi.png" alt="">
                             <div class="p-5">
                                 <h3 class="text-2xl text-black font-bold mb-2">Lionel Messi</h3>
-                                <ul class="mb-3 text-base">
-                                    <li>36 Goals</li>
-                                    <li>120 Assist</li>
+                                <p class="text-black mb-3">Lionel Messi, also known as Leo Messi, is an Argentine professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>517 Goals</li>
+                                    <li>218 Assist</li>
                                 </ul>
                                 <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
@@ -83,9 +84,10 @@
                             <img class="w-full" src="images/neymar.png" alt="">
                             <div class="p-5">
                                 <h3 class="text-2xl text-black font-bold mb-2">Neymar Jr</h3>
-                                <ul class="mb-3 text-base">
-                                    <li>36 Goals</li>
-                                    <li>120 Assist</li>
+                                <p class="text-black mb-3">Neymar Júnior, known as Neymar, is a Brazilian professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>401 Goals</li>
+                                    <li>224 Assist</li>
                                 </ul>
                                 <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
@@ -94,9 +96,10 @@
                             <img class="w-full" src="images/mbappe.png" alt="">
                             <div class="p-5">
                                 <h3 class="text-2xl text-black font-bold mb-2">Kylian Mbappe</h3>
-                                <ul class="mb-3 text-base">
-                                    <li>36 Goals</li>
-                                    <li>120 Assist</li>
+                                <p class="text-black mb-3">Kylian Mbappé Lottin is a French professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>226 Goals</li>
+                                    <li>86 Assist</li>
                                 </ul>
                                 <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
@@ -105,31 +108,106 @@
                             <img class="w-full" src="images/vitor.png" alt="">
                             <div class="p-5">
                                 <h3 class="text-2xl text-black font-bold mb-2">Vitor Machado</h3>
-                                <ul class="mb-3 text-base">
-                                    <li>36 Goals</li>
-                                    <li>120 Assist</li>
+                                <p class="text-black mb-3">Kylian Mbappé Lottin is a French professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>17 Goals</li>
+                                    <li>9 Assist</li>
                                 </ul>
                                 <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
-                            <img class="w-full" src="images/vitor.png" alt="">
+                            <img class="w-full" src="images/cristiano-ronaldo.png" alt="">
                             <div class="p-5">
-                                <h3 class="text-2xl text-black font-bold mb-2">Vitor Machado</h3>
-                                <ul class="mb-3 text-base">
-                                    <li>36 Goals</li>
-                                    <li>120 Assist</li>
+                                <h3 class="text-2xl text-black font-bold mb-2">Cristiano Ronaldo</h3>
+                                <p class="text-black mb-3">Cristiano Ronaldo is a Portuguese professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>400 Goals</li>
+                                    <li>133 Assist</li>
                                 </ul>
                                 <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
                         </div>
                         <div class="card border">
-                            <img class="w-full" src="images/vitor.png" alt="">
+                            <img class="w-full" src="images/mohamed-salah.png" alt="">
                             <div class="p-5">
-                                <h3 class="text-2xl text-black font-bold mb-2">Vitor Machado</h3>
-                                <ul class="mb-3 text-base">
+                                <h3 class="text-2xl text-black font-bold mb-2">Mohamed Salah</h3>
+                                <p class="text-black mb-3">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>121 Goals</li>
+                                    <li>47 Assist</li>
+                                </ul>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
+                            </div>
+                        </div>
+                        <div class="card border">
+                            <img class="w-full" src="images/lewandowski.png" alt="">
+                            <div class="p-5">
+                                <h3 class="text-2xl text-black font-bold mb-2">Robert Lewandowski</h3>
+                                <p class="text-black mb-3">Robert Lewandowski is a Polish professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>484 Goals</li>
+                                    <li>96 Assist</li>
+                                </ul>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
+                            </div>
+                        </div>
+                        <div class="card border">
+                            <img class="w-full" src="images/kevin.png" alt="">
+                            <div class="p-5">
+                                <h3 class="text-2xl text-black font-bold mb-2">Kevin De Bruyne</h3>
+                                <p class="text-black mb-3">Kevin De Bruyne is a Belgian professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>57 Goals</li>
+                                    <li>87 Assist</li>
+                                </ul>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
+                            </div>
+                        </div>
+                        <div class="card border">
+                            <img class="w-full" src="images/erling.png" alt="">
+                            <div class="p-5">
+                                <h3 class="text-2xl text-black font-bold mb-2">Erling Haaland</h3>
+                                <p class="text-black mb-3">Erling Braut Haaland is a Norwegian professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
                                     <li>36 Goals</li>
-                                    <li>120 Assist</li>
+                                    <li>9 Assist</li>
+                                </ul>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
+                            </div>
+                        </div>
+                        <div class="card border">
+                            <img class="w-full" src="images/harry.png" alt="">
+                            <div class="p-5">
+                                <h3 class="text-2xl text-black font-bold mb-2">Harry Kane</h3>
+                                <p class="text-black mb-3">Harry Edward Kane MBE is an English professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>184 Goals</li>
+                                    <li>43 Assist</li>
+                                </ul>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
+                            </div>
+                        </div>
+                        <div class="card border">
+                            <img class="w-full" src="images/karim-benzema.png" alt="">
+                            <div class="p-5">
+                                <h3 class="text-2xl text-black font-bold mb-2">Karim Benzema</h3>
+                                <p class="text-black mb-3">Karim Mostafa Benzema is a French professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>44 Goals</li>
+                                    <li>15 Assist</li>
+                                </ul>
+                                <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
+                            </div>
+                        </div>
+                        <div class="card border">
+                            <img class="w-full" src="images/trent.png" alt="">
+                            <div class="p-5">
+                                <h3 class="text-2xl text-black font-bold mb-2">Trent Alexander</h3>
+                                <p class="text-black mb-3">Trent John Alexander-Arnold is an English professional footballer.</p>
+                                <ul class="mb-3 text-base list-disc pl-5 text-slate-900 font-bold">
+                                    <li>10 Goals</li>
+                                    <li>45 Assist</li>
                                 </ul>
                                 <button class="bg-sky-600 w-full py-3 text-white font-bold uppercase disabled" onclick="selectPlayer(this)">Select</button>
                             </div>
