--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </header>
     <!-- Header Area End -->
     <!-- Hero Section -->
-    <section class="container mx-auto pt-20">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-3 items-center">
+    <section class="container mx-auto pt-20 px-3">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-3 items-center text-center md:text-left">
             <div>
-                <h1 class="text-5xl">Select Your Best Five</h1>
+                <h1 class="text-5xl mb-5">Select Your Best Five</h1>
                 <p class="text-black mt-2 w-full md:w-9/12">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
             <div>
@@ -62,7 +62,7 @@
     </section>
     <!-- Hero Section End -->
     <!-- Main Body Area -->
-    <main>
+    <main class="px-3">
         <!-- Player List -->
         <section class="container mx-auto py-14">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
