--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Your Best Five Player</title>
+    <title>Hire Top Rated Players</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -52,8 +52,8 @@
     <section class="container mx-auto pt-20 px-3">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-3 items-center text-center md:text-left">
             <div>
-                <h1 class="text-5xl mb-5">Select Your Best Five</h1>
-                <p class="text-black mt-2 w-full md:w-9/12">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <h1 class="text-5xl mb-5">Hire Top Rated Players</h1>
+                <p class="text-black mt-2 w-full md:w-9/12">Football is the most popular sport in the world and as such is a high-grossing game where players and coaches get paid huge amounts depending on their popularity and talent.</p>
             </div>
             <div>
                 <img src="images/best-five.png" alt="">
@@ -216,7 +216,7 @@
                 </div>
                 <div class="col-span-3 md:col-span-1">
                     <div class="bg-gray-900 p-7 mb-5">
-                        <h2 class="text-2xl font-bold text-white text-center">Selected Player</h2>
+                        <h2 class="text-2xl font-bold text-white text-center">Selected - V</h2>
                         <img class="mb-10 mx-auto" src="images/line.png" alt="">
                         <table class="table-auto text-white">
                             <tbody id="select-players">
